--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -71,16 +71,16 @@
     <Compile Include="Assets\HomeScripts\NewBehaviourScript.cs" />
     <Compile Include="Assets\HomeScripts\Patrol.cs" />
     <Compile Include="Assets\HomeScripts\record_position.cs" />
+    <Compile Include="Assets\HomeScripts\Scripts\OptitrackHmd.cs" />
+    <Compile Include="Assets\HomeScripts\Scripts\OptitrackRigidBody.cs" />
+    <Compile Include="Assets\HomeScripts\Scripts\OptitrackSkeletonAnimator.cs" />
+    <Compile Include="Assets\HomeScripts\Scripts\OptitrackStreamingClient.cs" />
     <Compile Include="Assets\Import\cc.cs" />
     <Compile Include="Assets\Import\droneetnodes.cs" />
     <Compile Include="Assets\Import\path.cs" />
     <Compile Include="Assets\log_recorder.cs" />
     <Compile Include="Assets\OptiTrack\Plugins\Managed\NatNetLib\Client.cs" />
     <Compile Include="Assets\OptiTrack\Plugins\Managed\NatNetLib\Native.cs" />
-    <Compile Include="Assets\OptiTrack\Scripts\OptitrackHmd.cs" />
-    <Compile Include="Assets\OptiTrack\Scripts\OptitrackRigidBody.cs" />
-    <Compile Include="Assets\OptiTrack\Scripts\OptitrackSkeletonAnimator.cs" />
-    <Compile Include="Assets\OptiTrack\Scripts\OptitrackStreamingClient.cs" />
     <Compile Include="Assets\RosSharp\Scripts\Extensions\HeaderExtensions.cs" />
     <Compile Include="Assets\RosSharp\Scripts\Extensions\TransformExtensions.cs" />
     <Compile Include="Assets\RosSharp\Scripts\RosBridgeClient\MessageHandling\Image.cs" />
